// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentInstanceTable with instances renders per snapshot 1`] = `
<DocumentFragment>
  <div>
    <mock-insightscommandbutton
      as="button"
      data-automation-id="assessment-instance-table-pass-unmarked-instances-button"
      disabled="false"
      iconname="Checkmark16Filled"
      text=" Pass unmarked instances"
    />
    <mock-styledwithviewportcomponent
      arialabelforgrid="Use arrow keys to navigate inside the instances grid"
      checkboxvisibility="2"
      columns="[object Object]"
      constrainmode="1"
      items="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`AssessmentInstanceTable with instances renders per snapshot with "none" header type 1`] = `
<DocumentFragment>
  <div>
    <mock-styledwithviewportcomponent
      arialabelforgrid="Use arrow keys to navigate inside the instances grid"
      checkboxvisibility="2"
      columns="[object Object]"
      constrainmode="1"
      items="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`AssessmentInstanceTable with instances renders per snapshot with "none" header type: StyledWithViewportComponent props 1`] = `
{
  "ariaLabelForGrid": "Use arrow keys to navigate inside the instances grid",
  "checkboxVisibility": 2,
  "columns": [
    {
      "fieldName": "fieldName",
      "key": "col1",
      "minWidth": 0,
      "name": "col1",
    },
  ],
  "constrainMode": 1,
  "items": [
    {
      "instance": {
        "testStepResults": {
          "step": {
            "status": 1,
          },
        },
      },
      "key": "items[0]",
      "statusChoiceGroup": null,
      "visualizationButton": null,
    },
  ],
  "onItemInvoked": [Function],
  "onRenderRow": [Function],
}
`;

exports[`AssessmentInstanceTable with instances renders per snapshot: InsightsCommandButton props 1`] = `
{
  "as": "button",
  "data-automation-id": "assessment-instance-table-pass-unmarked-instances-button",
  "disabled": false,
  "iconName": "Checkmark16Filled",
  "onClick": [Function],
  "text": " Pass unmarked instances",
}
`;

exports[`AssessmentInstanceTable with instances renders per snapshot: StyledWithViewportComponent props 1`] = `
{
  "ariaLabelForGrid": "Use arrow keys to navigate inside the instances grid",
  "checkboxVisibility": 2,
  "columns": [
    {
      "fieldName": "fieldName",
      "key": "col1",
      "minWidth": 0,
      "name": "col1",
    },
  ],
  "constrainMode": 1,
  "items": [
    {
      "instance": {
        "testStepResults": {
          "step": {
            "status": 1,
          },
        },
      },
      "key": "items[0]",
      "statusChoiceGroup": null,
      "visualizationButton": null,
    },
  ],
  "onItemInvoked": [Function],
  "onRenderRow": [Function],
}
`;

exports[`AssessmentInstanceTable with null instance data renders a spinner per snapshot 1`] = `
<DocumentFragment>
  <mock-styledspinnerbase
    classname="details-view-spinner"
    label="Scanning"
    size="3"
  />
</DocumentFragment>
`;
